# knowledge_aggregator_python

./: Dockerfile  graph.py  main.py  nodes.py  pyproject.toml  utils.py
.github/workflows/: main.yml
app/: api.py  graph.py  nodes.py  utils.py
app/model/: state.py  subquery.py
model/: aggregated_results.py
